:bug: :lipstick: fix overflows

--- a/front/src/styles/components/_editor.sass
+++ b/front/src/styles/components/_editor.sass
@@ -1,5 +1,7 @@
 .editor
     width: 100%
+    height: 100vh
+
     &__header
         margin: 1rem 0
 
