--- a/front/src/styles/components/_right_sidebar.sass
+++ b/front/src/styles/components/_right_sidebar.sass
@@ -9,3 +9,11 @@
 
     &__content
         margin: 0 2rem
+
+    overflow: auto
+    &::-webkit-scrollbar
+        width: 5px
+    &::-webkit-scrollbar-thumb
+        background-color: $clr-green-grey
+        &:active
+            background-color: $clr-green-soft
