--- a/front/src/styles/components/_sidebar.sass
+++ b/front/src/styles/components/_sidebar.sass
@@ -1,7 +1,10 @@
 .sidebar
     position: relative
+    height: 100%
+
     @include bg-light-primary
     @include stroke-blue-sharp
+    box-sizing: border-box
     padding: 1rem
     overflow: auto
     display: inline-flex
